--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Astegni</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/xlsx.full.min.js"></script>
-    <link href="css/root_theme.css" rel="stylesheet"/>
+    <link href="css/rootTheme.css" rel="stylesheet"/>
     <style>
        body {
             background-color: var(--background);
