--- a/student-profile.html
+++ b/student-profile.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTEGNI - Student Profile</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+<link href="./css/output.css" rel="stylesheet">
     <link href="css/root_theme.css" rel="stylesheet"/>
+    <script defer src="./js/xlsx.full.min.js"></script>
+    <script src="./js/app.js" defer></script>
+    <script defer src="./js/chart.min.js"></script>
+    <script defer src="./js/student-profile.js"></script>
     <style>
         body {
             background-color: var(--background);
