--- a/view-profile.html
+++ b/view-profile.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astegni - View Tutor</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.sheetjs.com/xlsx-latest/xlsx.full.min.js"></script>
-    <link href="css/root_theme.css" rel="stylesheet">
+<link href="./css/output.css" rel="stylesheet">
+    <link href="css/root_theme.css" rel="stylesheet"/>
+    <script defer src="./js/xlsx.full.min.js"></script>
+    <script src="./js/app.js" defer></script>
+    <script defer src="./js/chart.min.js"></script>
+    <script defer src="./js/view-profile.js"></script>
+    
 <style>
 body {
     background-color: var(--background);
