Structured it again
Thank you God for Jesus

--- a/branch/advertise-profile.html
+++ b/branch/advertise-profile.html
@@ -150,9 +150,9 @@
     <!-- Navigation -->
     <nav class="p-4 sticky top-0 z-10" role="navigation" aria-label="Main navigation">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">ASTEGNI</a>
+            <a href="../index.html" class="text-2xl font-bold">ASTEGNI</a>
             <div class="hidden md:flex space-x-6 items-center">
-                <a href="index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
+                <a href="../index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
                 <a href="find-tutors.html" class="hover:text-[var(--nav-link-hover)]">Find Tutors</a>
                 <button id="notification-bell" class="relative focus:outline-none" onclick="openNotificationModal()" aria-label="View notifications">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
