--- a/branch/find-tutors.html
+++ b/branch/find-tutors.html
@@ -214,9 +214,9 @@
 <body class="font-sans">
     <nav class="py-4 top-0 shadow-sm z-50 w-full fixed" style="background-color: var(--footer-bg);">
         <div class="container mx-auto px-4 flex justify-between items-center">
-            <a class="text-2xl font-bold" href="index.html" style="color: var(--heading);">Astegni</a>
+            <a class="text-2xl font-bold" href="../index.html" style="color: var(--heading);">Astegni</a>
             <div class="hidden md:flex items-center gap-6">
-                <a class="nav-link px-2 py-1 rounded" href="index.html">Home</a>
+                <a class="nav-link px-2 py-1 rounded" href="../index.html">Home</a>
                 <a class="nav-link px-2 py-1 rounded" href="reels.html">Reels</a>
                 <div id="profile-container" class="profile-container relative">
                     <button class="flex items-center gap-2 focus:outline-none px-2 py-1 rounded transition-all duration-200" onclick="toggleProfileDropdown()">
