--- a/branch/reels.html
+++ b/branch/reels.html
@@ -110,9 +110,9 @@
     <!-- Navigation -->
     <nav class="py-4 top-0 shadow-sm z-50 w-full fixed" style="background-color: var(--footer-bg);" role="navigation" aria-label="Main navigation">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">ASTEGNI</a>
+            <a href="../index.html" class="text-2xl font-bold">ASTEGNI</a>
             <div class="hidden md:flex space-x-6 items-center">
-                <a href="index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
+                <a href="../index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
                 <a href="find-tutors.html" class="hover:text-[var(--nav-link-hover)]">Find Tutors</a>
                 <a href="reels.html" class="text-[var(--nav-link-hover)] font-semibold">Reels</a>
                 <div id="profile-container" class="profile-container relative">
