--- a/branch/student-profile.html
+++ b/branch/student-profile.html
@@ -127,9 +127,9 @@
     <!-- Navigation -->
     <nav class="p-4 sticky top-0 z-10" role="navigation" aria-label="Main navigation">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">ASTEGNI</a>
+            <a href="../index.html" class="text-2xl font-bold">ASTEGNI</a>
             <div class="hidden md:flex space-x-6 items-center">
-                <a href="index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
+                <a href="../index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
                 <a href="find-tutors.html" class="hover:text-[var(--nav-link-hover)]">Find Tutors</a>
                 <a href="student-profile.html" class="hover:text-[var(--nav-link-hover)]">My Profile</a>
                 <button id="notification-bell" class="relative focus:outline-none" onclick="openNotificationModal()" aria-label="View notifications">
