--- a/branch/tutor-profile.html
+++ b/branch/tutor-profile.html
@@ -90,9 +90,9 @@
   <!-- Navigation (unchanged) -->
   <nav class="p-4 sticky top-0 z-10 shadow-sm">
     <div class="container mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold">ASTEGNI</a>
+      <a href="../index.html" class="text-2xl font-bold">ASTEGNI</a>
       <div class="hidden md:flex space-x-6 items-center" id="desktop-nav">
-        <a href="index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
+        <a href="../index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
         <a href="find-tutors.html" class="hover:text-[var(--nav-link-hover)]">Find Students</a>
         <button id="notification-bell" class="relative focus:outline-none" onclick="openNotificationModal()">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
