--- a/branch/view-profile.html
+++ b/branch/view-profile.html
@@ -299,9 +299,9 @@ button.cta-button:active {
     <!-- Navigation -->
     <nav class="py-4 top-0 shadow-sm z-50 w-full fixed" style="background-color: var(--footer-bg);">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">Astegni</a>
+            <a href="../index.html" class="text-2xl font-bold">Astegni</a>
             <div class="hidden md:flex space-x-6 items-center" id="desktop-nav">
-                <a href="index.html" class="hover:text-[--nav-link-hover]">Home</a>
+                <a href="../index.html" class="hover:text-[--nav-link-hover]">Home</a>
                 <a href="find-tutors.html" class="hover:text-[--nav-link-hover]">Find Tutors</a>
                 <a class="nav-link px-2 py-1 rounded" href="reels.html">Reels</a>
                 <div id="profile-container" class="profile-container relative">
