--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
             <a class="text-2xl font-bold" href="index.html" style="color: var(--heading);">Astegni</a>
             <div class="hidden md:flex items-center gap-4">
                 <a class="nav-link px-2 py-1 rounded" href="index.html">Home</a>
-                <a id="find-tutors-link" class="nav-link px-2 py-1 rounded hidden" href="find-tutors.html">Find Tutors</a>
-                <a id="reels-link" class="nav-link px-2 py-1 rounded hidden" href="reels.html">Reels</a>
+                <a id="find-tutors-link" class="nav-link px-2 py-1 rounded hidden" href="branch/">Find Tutors</a>
+                <a id="reels-link" class="nav-link px-2 py-1 rounded hidden" href="branch/">Reels</a>
 
                <div class="flex items-center space-x-4">
             <button id="theme-toggle" onclick="toggleTheme()" class="text-gray-500 dark:text-gray-300"></button>
