--- a/branch/tutor-profile.html
+++ b/branch/tutor-profile.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ASTEGNI - Tutor Profile</title>
-  <link href="./css/output.css" rel="stylesheet">
-  <link href="css/root_theme.css" rel="stylesheet"/>
-  <script defer src="./js/xlsx.full.min.js"></script>
-  <script src="./js/app.js" defer></script>
-  <script defer src="./js/chart.min.js"></script>
-  <script defer src="./js/tutor-profile.js"></script>
+  <link href="../css/output.css" rel="stylesheet">
+  <link href="../css/root_theme.css" rel="stylesheet"/>
+  <script defer src="../js/xlsx.full.min.js"></script>
+  <script src="../js/app.js" defer></script>
+  <script defer src="../js/chart.min.js"></script>
+  <script defer src="../js/tutor-profile.js"></script>
   <style>
     body {
       background-color: var(--background);
