--- a/branch/parent-profile.html
+++ b/branch/parent-profile.html
@@ -617,65 +617,56 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="py-8" style="background-color: var(--footer-bg);">
-        <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="text-center md:text-left">
-                    <h3 class="text-lg font-semibold mb-4" style="color: var(--heading);">Quick Links</h3>
-                    <ul class="space-y-2">
-                        <li><a class="nav-link hover:underline" href="news.html">News</a></li>
-                        <li><a class="nav-link hover:underline" href="reels.html">Reels</a></li>
-                        <li><a class="nav-link hover:underline" href="store.html">Store</a></li>
-                        <li><a class="nav-link hover:underline" href="find-job.html">Find a Job</a></li>
-                        <li><button class="nav-link hover:underline bg-transparent border-none p-0"
-                                onclick="openRateAstegniModal()">Rate ASTEGNI</button></li>
+<!-- Enhanced Footer -->
+    <footer class="footer-section">
+        <div class="footer-wave">
+            <svg viewBox="0 0 1440 120" preserveAspectRatio="none">
+                <path d="M0,64L48,69.3C96,75,192,85,288,80C384,75,480,53,576,48C672,43,768,53,864,58.7C960,64,1056,64,1152,58.7C1248,53,1344,43,1392,37.3L1440,32L1440,120L1392,120C1344,120,1248,120,1152,120C1056,120,960,120,864,120C768,120,672,120,576,120C480,120,384,120,288,120C192,120,96,120,48,120L0,120Z"></path>
+            </svg>
+        </div>
+        <div class="container mx-auto px-3 sm:px-4">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 sm:gap-8">
+               
+                <div class="text-center md:text-left footer-column">
+                    <h3 class="footer-title">Quick Links</h3>
+                    <ul class="footer-links">
+                        <li><a href="../index.html" class="footer-link">Home</a></li>
+                        <li><a href="#contact" class="footer-link">Contact Us</a></li>
+                        <li><button onclick="openLoginRegisterModal()" class="footer-link-btn">Login/Register</button></li>
+                        <li><button onclick="openAdvertiseModal()" class="footer-link-btn">Advertise</button></li>
                     </ul>
                 </div>
-                <div class="text-center md:text-left">
-                    <h3 class="text-lg font-semibold mb-4" style="color: var(--heading);">Newsletter</h3>
-                    <p class="mb-4">Stay updated with our latest news and offers.</p>
-                    <form class="mt-4 flex flex-col items-center md:items-start">
-                        <input class="w-full max-w-xs p-2 border rounded-lg mb-4" placeholder="Enter your email"
-                            type="email" />
-                        <button class="cta-button px-4 py-2 rounded-lg w-full max-w-xs">Subscribe</button>
-                    </form>
+                <div class="text-center md:text-left footer-column">
+                    <h3 class="footer-title">Contact Info</h3>
+                    <p class="footer-text">📞 +251-912-345-678</p>
+                    <p class="footer-text">✉️ <a href="mailto:info@astegni.et" class="footer-link">info@astegni.et</a></p>
+                    <p class="footer-text">📍 Addis Ababa, Ethiopia</p>
                 </div>
-                <div class="text-center md:text-left">
-                    <h3 class="text-lg font-semibold mb-4" style="color: var(--heading);">Get in Touch</h3>
-                    <p class="mb-2">Email: <a class="nav-link hover:underline"
-                            href="mailto:info@astegni.et">info@astegni.et</a></p>
-                    <p class="mb-4">Phone: +251-912-345-678</p>
-                    <div class="flex justify-center md:justify-start gap-4">
-                        <a class="social-icon" href="https://facebook.com">
-                            <svg class="w-6 h-6" fill="var(--footer-text)" viewBox="0 0 24 24">
-                                <path
-                                    d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z">
-                                </path>
-                            </svg>
+                <div class="text-center md:text-left footer-column">
+                    <h3 class="footer-title">Follow Us</h3>
+                    <div class="social-links">
+                        <a href="#" aria-label="Facebook" class="social-link">
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3V2z"></path></svg>
                         </a>
-                        <a class="social-icon" href="https://x.com">
-                            <svg class="w-6 h-6" fill="var(--footer-text)" viewBox="0 0 24 24">
-                                <path
-                                    d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z">
-                                </path>
-                            </svg>
+                        <a href="#" aria-label="Twitter" class="social-link">
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path></svg>
                         </a>
-                        <a class="social-icon" href="https://instagram.com">
-                            <svg class="w-6 h-6" fill="var(--footer-text)" viewBox="0 0 24 24">
-                                <path
-                                    d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.148 3.227-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.148-4.771-1.691-4.919-4.919-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.332.014 7.052.072 2.951.227.228 2.996.073 7.052.014 8.332 0 8.741 0 12c0 3.259.014 3.668.072 4.948.225 4.053 2.992 6.776 7.048 6.931 1.28.058 1.689.072 4.948.072s3.668-.014 4.948-.072c4.056-.155 6.824-2.878 6.979-6.931.058-1.28.072-1.689.072-4.948s-.014-3.668-.072-4.948c-.155-4.053-2.923-6.776-6.979-6.931C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z" />
-                            </svg>
+                        <a href="#" aria-label="LinkedIn" class="social-link">
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path><circle cx="4" cy="4" r="2"></circle></svg>
+                        </a>
+                        <a href="#" aria-label="Instagram" class="social-link">
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1112.324 0 6.162 6.162 0 01-12.324 0zM12 16a4 4 0 110-8 4 4 0 010 8zm4.965-10.405a1.44 1.44 0 112.881.001 1.44 1.44 0 01-2.881-.001z"></path></svg>
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="mt-8 text-center">
+            <div class="footer-bottom">
                 <p class="mb-2">Join us with only 500 birr registration fee and 200 birr/month</p>
                 <p>© 2025 Astegni. All rights reserved.</p>
             </div>
         </div>
     </footer>
+
 
     <script src = '../js/parent-profile.js'></script>
 
