What can we say about these commits?

--- a/profile pages/student-profile.html
+++ b/profile pages/student-profile.html
@@ -319,30 +319,31 @@
 
     <!-- Right Sidebar (Ads) -->
     <aside class="right-sidebar" id="right-sidebar">
-        <div class="ad-card-vertical">
-            <div class="ad-content">
-                <span class="ad-label">Premium</span>
-                <h4>Excel in Math</h4>
-                <p>Get 30% off your first session</p>
-                <button class="btn-ad-small">Explore</button>
+        <!-- Premium Ad -->
+            <div class="widget-modern premium-ad">
+              <div class="ad-premium-modern">
+                <div class="ad-shimmer"></div>
+                <div class="ad-content-premium">
+                  <span class="ad-label">SPONSORED</span>
+                  <h4>Unlock Premium</h4>
+                  <p>Get unlimited access to rare books</p>
+                  <button class="ad-cta-btn">Learn More</button>
+                </div>
+              </div>
             </div>
-        </div>
-        <div class="ad-card-vertical">
-            <div class="ad-content">
-                <span class="ad-label">Featured</span>
-                <h4>Science Labs</h4>
-                <p>Interactive virtual experiments</p>
-                <button class="btn-ad-small">Try Now</button>
+<!-- Premium Ad -->
+            <div class="widget-modern premium-ad">
+              <div class="ad-premium-modern">
+                <div class="ad-shimmer"></div>
+                <div class="ad-content-premium">
+                  <span class="ad-label">SPONSORED</span>
+                  <h4>Unlock Premium</h4>
+                  <p>Get unlimited access to rare books</p>
+                  <button class="ad-cta-btn">Learn More</button>
+                </div>
+              </div>
             </div>
-        </div>
-        <div class="ad-card-vertical">
-            <div class="ad-content">
-                <span class="ad-label">New</span>
-                <h4>Study Groups</h4>
-                <p>Join peer learning sessions</p>
-                <button class="btn-ad-small">Join</button>
-            </div>
-        </div>
+
     </aside>
 
     <!-- Tutor Details Modal -->
