--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <!-- Mobile Menu -->
         <div class="mobile-menu hidden" id="mobile-menu">
             <div class="mobile-menu-content">
-                <a class="mobile-menu-item" href="news.html">📰 News</a>
+                <a class="mobile-menu-item" href="branch/news.html">📰 News</a>
                 <a class="mobile-menu-item" href="branch/find-tutors.html">👨‍🏫 Find Tutors</a>
                 <a class="mobile-menu-item" href="branch/reels.html">🎬 Reels</a>
                 <a class="mobile-menu-item" href="branch/store.html">🛍️ Store</a>
@@ -605,7 +605,7 @@
                         <option value="advertiser">Advertiser</option>
                         <option value="employer">Employer</option>
                         <option value="author">Author</option>
-                        <option value="religious">Religious Organization</option>
+                        <option value="church">Church</option>
                     </select>
                 </div>
                 
