changed profile pictures manually. :(

--- a/My Profile/advertiser-profile.html
+++ b/My Profile/advertiser-profile.html
@@ -238,20 +238,21 @@
         <!-- Profile Header Section - Always Visible -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="https://via.placeholder.com/1920x400/F59E0B/FFFFFF?text=Cover" alt="Cover" class="cover-img">
+                <img src="../pictures/ad cover.jpeg" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="https://via.placeholder.com/200" alt="EduAds Inc." class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                        <img src="../pictures/ad profile.jpeg" alt="Advertiser profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">EduAds Inc.</h1>
+                            <h1 class="center-name" id="centerName">EAdvertiser profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Verified Advertiser</span>
                                 <span class="center-score">Success Rate: 98.5%</span>
