--- a/My Profile/author-profile.html
+++ b/My Profile/author-profile.html
@@ -191,6 +191,7 @@
         <section class="profile-header-section">
             <div class="cover-image-container">
                 <img src="../pictures/author cover.jpg" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
@@ -198,12 +199,12 @@
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
                         <img src="../pictures/Author profile.jpg" alt="Author profile" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Institute profile</h1>
+                            <h1 class="center-name" id="centerName">Author profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Verified</span>
                                 <span class="center-score">Score: 98/100</span>
