--- a/My Profile/bookstore-profile.html
+++ b/My Profile/bookstore-profile.html
@@ -242,6 +242,7 @@
         <section class="profile-header-section">
             <div class="cover-image-container">
                 <img src="../pictures/bookstore cover.jpg" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
@@ -249,7 +250,7 @@
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
                         <img src="../pictures/bookstore profile.jpg" alt="Bookstore profile" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
