--- a/My Profile/church-profile.html
+++ b/My Profile/church-profile.html
@@ -262,19 +262,20 @@
         <section class="profile-header-section">
             <div class="cover-image-container">
                 <img src="../pictures/jesus cover.jpg" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/Jesus  profile.jpg" alt="Pastor David Emmanuel" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                        <img src="../pictures/Jesus  profile.jpg" alt="Church profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Pastor David Emmanuel</h1>
+                            <h1 class="center-name" id="centerName">Church profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✓ Verified Religious Leader</span>
                                 <span class="center-score">Trust Score: 99/100</span>
