--- a/My Profile/employer-profile.html
+++ b/My Profile/employer-profile.html
@@ -240,22 +240,22 @@
         <!-- Profile Header Section (Changed to Company Profile) -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=1200&h=400&fit=crop" alt="Cover"
+                <img src="../pictures/employer cover.avif" alt="Cover"
                     class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="https://images.unsplash.com/photo-1560179707-f14e90ef3623?w=200&h=200&fit=crop"
-                            alt="Tech Corp Ethiopia" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                        <img src="../pictures/employer profile.jpg" alt="Employer profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Tech Corp Ethiopia</h1>
+                            <h1 class="center-name" id="centerName">Employer profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Verified Employer</span>
                                 <span class="center-score">Trust Score: 95/100</span>
