--- a/My Profile/job-seeker.html
+++ b/My Profile/job-seeker.html
@@ -263,8 +263,9 @@
         <!-- Profile Header Section (Changed to Job Seeker Profile) -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="../pictures/job cover 1.jpg" alt="Cover"
+                <img src="../pictures/job cover.jpg" alt="Cover"
                     class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
@@ -272,13 +273,13 @@
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
                         <img src="../pictures/job seeker profile.jpg"
-                            alt="John Doe" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                            alt="Job seeker profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">John Doe</h1>
+                            <h1 class="center-name" id="centerName">Job seeker Profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✓ Verified Professional</span>
                                 <span class="center-score">Profile Strength: 92%</span>
