--- a/My Profile/journalist-profile.html
+++ b/My Profile/journalist-profile.html
@@ -235,6 +235,7 @@
             <div class="cover-image-container">
                 <img src="../pictures/journalist cover.jpg" alt="Cover"
                     class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
@@ -242,13 +243,13 @@
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
                         <img src="../pictures/Journalist image 1.jpg"
-                            alt="Sarah Mitchell" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                            alt="Journailst profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Sarah Mitchell</h1>
+                            <h1 class="center-name" id="centerName">Journalist profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Verified Journalist</span>
                                 <span class="center-score">Trust Score: 98/100</span>
