--- a/My Profile/parent-profile.html
+++ b/My Profile/parent-profile.html
@@ -254,20 +254,21 @@
         <!-- Profile Header Section - Always Visible -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="../pictures/parent profile.jpg" alt="Cover" class="cover-img">
+                <img src="../pictures/parent cover.webp" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/parent profile 1.jpg" alt="Parent profile" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                        <img src="../pictures/parent profile.jpg" alt="Parent profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Mulugeta Alemu</h1>
+                            <h1 class="center-name" id="centerName">Parent profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✓ Verified</span>
                                 <span class="center-score">Parent Account</span>
