--- a/My Profile/student-profile.html
+++ b/My Profile/student-profile.html
@@ -465,20 +465,21 @@
         <!-- Profile Header Section - Unchanged -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="../pictures/tutor cover 1.jpg" alt="Cover" class="cover-img">
+                <img src="../pictures/student cover.jpg" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/student profile kid.jpg" alt="John Doe" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                        <img src="../pictures/student profile kid.jpg" alt="Student profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">John Doe</h1>
+                            <h1 class="center-name" id="centerName">Student profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Verified Student</span>
                                 <span class="center-score">GPA: 3.8/4.0</span>
