--- a/My Profile/tutor-profile.html
+++ b/My Profile/tutor-profile.html
@@ -238,20 +238,21 @@
         <!-- Profile Header Section (Same as journalist-profile.html structure) -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="../pictures/cover_photo.png" alt="Cover" class="cover-img">
+                <img src="../pictures/tutor cover.jpg" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/profile_picture.png" alt="Tutor Profile" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+                        <img src="../pictures/tutor profile.jpg" alt="Tutor Profile" class="profile-avatar">
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Your Name</h1>
+                            <h1 class="center-name" id="centerName">Tutor profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge" id="verification-status">✗ Unverified</span>
                                 <span class="center-score">Rating: <span id="tutor-rating">N/A</span></span>
