--- a/My Profile/Institute-profile.html
+++ b/My Profile/Institute-profile.html
@@ -190,6 +190,7 @@
         <section class="profile-header-section">
             <div class="cover-image-container">
                 <img src="../pictures/institute cover.jpg" alt="Cover" class="cover-img">
+<span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
 
@@ -197,7 +198,7 @@
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
                         <img src="../pictures/institute profile.jpg" alt="Institute profile" class="profile-avatar">
-                        <div class="avatar-ring"></div>
+<span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
                     <div class="profile-details-section">
