fixed some issues.

--- a/My Profile/parent-profile.html
+++ b/My Profile/parent-profile.html
@@ -306,23 +306,23 @@
                             "Investing in my children's education for a brighter future"
                         </div>
 
-                        <div class="follow-stats-cards">
-                            <div class="follow-card" onclick="openChildrenModal()">
-                                <div class="follow-icon">👨‍👩‍👧‍👦</div>
+                                                <div class="follow-stats-cards">
+                            <div class="follow-card" onclick="openFollowersModal('followers')">
+                                <div class="follow-icon">👥</div>
                                 <div class="follow-info">
-                                    <span class="stat-value">3</span>
-                                    <span class="stat-label">Children</span>
+                                    <span class="stat-value">45.2K</span>
+                                    <span class="stat-label">Followers</span>
                                 </div>
                             </div>
-                            <div class="follow-card" onclick="openCoursesModal()">
-                                <div class="follow-icon">📚</div>
+                            <div class="follow-card" onclick="openFollowersModal('following')">
+                                <div class="follow-icon">➕</div>
                                 <div class="follow-info">
-                                    <span class="stat-value">12</span>
-                                    <span class="stat-label">Courses</span>
+                                    <span class="stat-value">234</span>
+                                    <span class="stat-label">Following</span>
                                 </div>
                             </div>
                         </div>
-
+                        
                         <div class="profile-next-session" id="profileNextSession">
                             <div class="session-alert">
                                 <span class="alert-icon gradient-text">⏰</span>
