some changes made on news and find tutors page

--- a/My Profile/author-profile.html
+++ b/My Profile/author-profile.html
@@ -181,6 +181,12 @@
                 <span>Need Help?</span>
                 
             </button>
+            <!-- Wave animation at the bottom of sidebar -->
+            <div class="sidebar-wave-bottom">
+                <svg viewBox="0 0 280 40" preserveAspectRatio="none">
+                    <path d="M0,20 Q70,5 140,20 T280,20 L280,40 L0,40 Z" fill="currentColor" class="wave-path"></path>
+                </svg>
+            </div>
         </div>
         
     </aside>
