--- a/View profile/view-tutor-profile.html
+++ b/View profile/view-tutor-profile.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ASTEGNI - View Tutor</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="../css/root_theme.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
   <link href="../css/view-profile.css" rel="stylesheet">
 </head>
 
