updated church profile.

--- a/My Profile/church-profile.html
+++ b/My Profile/church-profile.html
@@ -63,18 +63,18 @@
             <div class="sidebar-section" data-content="religion">
                 <button class="sidebar-btn" data-content="spiritual-insights">
                     <span class="sidebar-btn-icon">✨</span>
-                    <span>Spiritual AI Insights</span>
+                    <span>AI Insights</span>
                     <span class="sidebar-badge">New</span>
+                </button>
+                <button class="sidebar-btn" data-content="sermons">
+                    <span class="sidebar-btn-icon">📖</span>
+                    <span>Saved</span>
+                    <span class="sidebar-badge">156</span>
                 </button>
                 <button class="sidebar-btn" data-content="sermons">
                     <span class="sidebar-btn-icon">📖</span>
                     <span>Sermons & Messages</span>
                     <span class="sidebar-badge">156</span>
-                </button>
-                <button class="sidebar-btn" data-content="bible-studies">
-                    <span class="sidebar-btn-icon">📚</span>
-                    <span>Bible Studies</span>
-                    <span class="sidebar-badge">42</span>
                 </button>
                 <button class="sidebar-btn" data-content="prayer-requests">
                     <span class="sidebar-btn-icon">🙏</span>
@@ -83,7 +83,7 @@
                 </button>
                 <button class="sidebar-btn" data-content="congregation">
                     <span class="sidebar-btn-icon">⛪</span>
-                    <span>Congregation</span>
+                    <span>Yeneta members</span>
                     <span class="sidebar-badge">2.5K</span>
                 </button>
                 <button class="sidebar-btn" data-content="religious-events">
@@ -96,23 +96,10 @@
                     <span>Counseling Sessions</span>
                     <span class="sidebar-badge">23</span>
                 </button>
-                <button class="sidebar-btn" data-content="worship-ministry">
-                    <span class="sidebar-btn-icon">🎵</span>
-                    <span>Worship Ministry</span>
-                </button>
-                <button class="sidebar-btn" data-content="youth-ministry">
-                    <span class="sidebar-btn-icon">👦</span>
-                    <span>Youth Ministry</span>
-                    <span class="sidebar-badge">320</span>
-                </button>
                 <button class="sidebar-btn" data-content="outreach">
                     <span class="sidebar-btn-icon">🤲</span>
                     <span>Outreach Programs</span>
                     <span class="sidebar-badge">8</span>
-                </button>
-                <button class="sidebar-btn" data-content="religious-library">
-                    <span class="sidebar-btn-icon">📚</span>
-                    <span>Religious Library</span>
                 </button>
                 <button class="sidebar-btn" data-content="donations">
                     <span class="sidebar-btn-icon">💝</span>
@@ -208,6 +195,10 @@
             <!-- Quick Stats Section -->
             <div class="sidebar-quick-stats">
                 <h4>Quick Stats</h4>
+                <div class="quick-stat-item">
+                    <span class="stat-label">Saved</span>
+                    <span class="stat-value">2,500</span>
+                </div>
                 <div class="quick-stat-item">
                     <span class="stat-label">Congregation Size</span>
                     <span class="stat-value">2,500</span>
@@ -438,11 +429,19 @@
                                     <div class="stat-detail">Since 2004</div>
                                 </div>
                             </div>
+                        <div class="stat-card hover-lift">
+                                <div class="stat-icon">📖</div>
+                                <div class="stat-info">
+                                    <div class="stat-number">1,250</div>
+                                    <div class="stat-desc">Saved</div>
+                                    <div class="stat-detail">Since 2004</div>
+                                </div>
+                            </div>
                             <div class="stat-card hover-lift">
                                 <div class="stat-icon">⛪</div>
                                 <div class="stat-info">
                                     <div class="stat-number">2,500</div>
-                                    <div class="stat-desc">Congregation Members</div>
+                                    <div class="stat-desc">Yeneta members</div>
                                     <div class="stat-detail">Active Members</div>
                                 </div>
                             </div>
