--- a/My Profile/church-profile.html
+++ b/My Profile/church-profile.html
@@ -66,7 +66,7 @@
                     <span>AI Insights</span>
                     <span class="sidebar-badge">New</span>
                 </button>
-                <button class="sidebar-btn" data-content="sermons">
+                <button class="sidebar-btn" data-content="">
                     <span class="sidebar-btn-icon">📖</span>
                     <span>Saved</span>
                     <span class="sidebar-badge">156</span>
